<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/textViewDescription"
        style="@style/DescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desciption_edittext_view_example"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:contentDescription="@string/accessibility_edittext"
        android:hint="@string/hint_edittext_text"
        android:text="@string/edittext_text"/>

</LinearLayout>